--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script>
+      window.payjpPublicKey = "<%= ENV['PAYJP_PUBLIC_KEY'] %>";
+    </script>
     <title>Furima42180</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <script type="text/javascript" src="https://js.pay.jp/v2/pay.js"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
