--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,5 @@
 <%= render "shared/second-header"%>
+<%= include_gon %>
 
 <div class='transaction-contents'>
   <div class='transaction-main'>
@@ -26,7 +27,7 @@
         支払金額
       </h1>
       <p class='item-payment-price'>
-        ¥<%= "販売価格" %>
+        ¥<%= @item.price %>
       </p>
     </div>
     <%# /支払額の表示 %>
